fix error made when adding back icon spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,13 +121,13 @@ body{
 /*details inside the field set*/
 /*In order to gain a better understanding and to help style the arrow of a summary element I used DilshanKelsen.com*/
 summary::marker {
-    content: "\f7c9     ";
+    content: '\f7c9' ' ';
     font-family: "Font Awesome 6 Free";
     font-weight: 700;
   }
 
   details[open] > summary::marker{
-    content: "\e4dc     ";
+    content: '\e4dc' ' ';
     font-family: "Font Awesome 6 Free";
     font-weight: 700;
   }
